--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>即時聊天室</title>
+  <title>webduino聊天室</title>
   <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="life.css">
